# Kenos

./: CMakeLists.txt  README.md
image/efi/boot/: BOOTX64.efi
include/fs/: fat.h
projects/: CMakeLists.txt
projects/os/boot/: CMakeLists.txt
projects/tools/: CMakeLists.txt
projects/tools/createdisk/: CMakeLists.txt  main.c  test.c
